--- a/personalsite/main/templates/uprights.html
+++ b/personalsite/main/templates/uprights.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>24e Uprights Lead<br>Carnegie Mellon Racing</h1>
+    <h1>Uprights Lead<br>Carnegie Mellon Racing (2023-24)</h1>
 
     <section class="project-section">
         <p>
