--- a/personalsite/main/templates/RTR.html
+++ b/personalsite/main/templates/RTR.html
@@ -7,12 +7,12 @@
 
 {% block content %}
   <h1>
-    Rethink the Rink Make-a-thon<br>
-    with the Pittsburgh Penguins (2023)
+    Rethink the Rink Make-a-thon
+    with the Pittsburgh Penguins (Won Best Overall)
   </h1>
   <section class="project-section">
     <p>
-      At the Rethink the Rink make-a-thon, teams were tasked with re-designing the shot blocker to better protect players’ 
+      At the 2023 Rethink the Rink make-a-thon, teams were tasked with re-designing the shot blocker to better protect players' 
       ankles. We discovered that many professional and amateur players avoided traditional shot blockers because they were 
       bulky and uncomfortable, specifically noting how they didn't like putting anything on the outside of their skate.
       In response, we developed an integrated internal design that became part of the sock.
@@ -36,7 +36,7 @@
     </p>
     
     <section class="video-section">
-      <p>Here's a video about the make-a-thon</p>
+      <p>Here's a video about the make-a-thon:</p>
       <div style="position: relative; width: 80%; padding-bottom: 56.25%; margin: auto;">
         <iframe width="560" height="315" 
                 src="https://www.youtube.com/embed/QogLY59yvNA?si=ZRv_dycnZ5aliN0H" 
