--- a/personalsite/main/templates/base.html
+++ b/personalsite/main/templates/base.html
@@ -14,8 +14,9 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" 
       rel="stylesheet"
     >
-
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
+
 <body>
     <!-- Header -->
     <header class="navbar">
@@ -23,7 +24,7 @@
             <!-- Left side: Profile photo + site title -->
             <div class="header-left">
                 <img 
-                    src="{% static 'images/brian.png' %}" 
+                    src="{% static 'images/GradHeadshot.jpg' %}" 
                     alt="Photo of Brian" 
                     class="profile-pic"
                 >
@@ -31,6 +32,14 @@
                     <a href="{% url 'home' %}">Brian Check</a>
                 </div>
             </div>
+
+            <!-- Mobile Menu Toggle -->
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
+            <label for="nav-toggle" class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
 
             <!-- Navigation -->
             <nav>
@@ -45,11 +54,9 @@
 
     <!-- Main Content -->
     <main>
-        <div class="container">
-            {% block content %}
-            <!-- Page-specific content goes here -->
-            {% endblock %}
-        </div>
+        {% block content %}
+        <!-- Page-specific content goes here -->
+        {% endblock %}
     </main>
 
     <!-- Footer -->
